[package]
name = "rusjure_compiler"
version = "0.0.0"
authors = ["Richard Tichý <tichy@artify.zone>"]
edition = '2021'
license = "MIT OR Apache-2.0"
repository = "https://github.com/rusjure/rusjure"

[[bin]]
name = "rsjc"
path = "src/main.rs"

[dependencies]
rusjure_lexer = { version = "0.0.0", path = "../../libs/lexer" }
rusjure_parser = { version = "0.0.0", path = "../../libs/parser" }
rusjure_tokens = { version = "0.0.0", path = "../../libs/tokens" }

anyhow = "1.0"

clap = { version = "4.2", features = ["derive"] }

log = { version = "0.4", features = ["std"] }
env_logger = "0.10"
