[package]
name = "rusjure_parser"
version = "0.0.0"
authors = ["Richard Tichý <tichy@artify.zone>"]
edition = '2021'
license = "MIT OR Apache-2.0"
repository = "https://github.com/rusjure/rusjure"

[dependencies]
rusjure_tokens = { version = "0.0.0", path = "../tokens" }

pest = "2.5"
pest_derive = "2.5"
