[package]
name = "rusjure_parser"
version = "0.0.0"
authors = ["Richard Tichý <tichy@artify.zone>"]
edition = '2021'
license = "MIT OR Apache-2.0"
repository = "https://github.com/rusjure/rusjure"

[dependencies]
rusjure_corelib = { path = "../corelib", version = "0.0.0" }
rusjure_tokens = { path = "../tokens", version = "0.0.0" }
llvm-sys = { version = "150.1", features = ["clang-sys"] }
